:bug: Fix line break on flex/grid options

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -24,6 +24,9 @@
       .layout-options {
         width: $s-92;
       }
+      .layout-option {
+        white-space: nowrap;
+      }
       .remove-layout,
       .add-layout {
         @extend .button-tertiary;
